# OctoLinker

./: .appveyor.yml  .babelrc  .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .hound.yml  .jshintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  Gruntfile.js  LICENSE  README.md  _jestsetup.js  appveyor.yml  babel.config.js  bower.json  codecov.yml  dangerfile.js  gulpfile.js  jest-puppeteer.config.cjs  jest-puppeteer.config.js  jest.config.js  karma.conf.js  lerna.json  npm-shrinkwrap.json  package-lock.json  package.json  privacy-policy.md  webpack.config.js  webpack.dist.config.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  auto-merge.yml  dependabot.yml  issue_template.md  pr-badge.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.yml  feature-request.md  feature_request.yml
.github/workflows/: automerge.yml  ci.yml  dependabot-auto-merge.yml  release.yml
__mocks__/: path.js
app/: manifest.json  options.html  popup.html
app/data/: bower.js  bower.json  npm.js  npm.json
app/scripts/: _contentscript.js  _options.js  background.js  chromereload.js  contentscript.js  index.js  intro.js  options.js
app/styles/: main.css  options.css
assets/: background.js  manifest.firefox.json  manifest.json  options.css  options.html  options.js  style.css
chrome/: manifest.json  style.css
data/: bower.json  npm_new.json  npm_noresult.json
e2e/: .eslintrc.js  README.md  automated.test.js  diff-fixtures.json  example.test.js  generate-fixtures-json.cjs  generate-fixtures-json.js  jest-e2e.config.js  scrape-repo.js
e2e/__snapshots__/: automated.test.js.snap
e2e/fixtures/rust/: Cargo.toml
firefox/: manifest.json
lib/: app.css  app.js  background.js  click-handler.js  debug-mode.js  gh-interface.js  insert-link.js  insert-link.test.js  load-plugins.js  notification.js  octo-linker.js  options.js  pattern-preset.js  plugin-manager.js  wrap-keyword.js
lib/__tests__/: click-handler.test.js  insert-link.test.js
lib/background/: fetch.js  index.js  insight.js  newTab.js
lib/options/: options.js  page.js  storage.js
lib/plugins/: bower-manifest.js  composer-manifest.js  css.js  docker.js  dot-net-core.js  dot-net-proj.js  dot-net.js  gemfile-manifest.js  go.js  haskell.js  homebrew-manifest.js  html.js  java.js  javascript.js  less.js  nodejs-relative-path.js  npm-manifest.js  python.js  requirements-txt.js  ruby.js  rust.js  sass.js  typescript.js  vim.js
lib/resolver/: docker-image.js  git-url.js  github-search.js  github-shorthand.js  go-file.js  go-universal.js  go.js  homebrew-file.js  index.js  (+13 more)
options/: options.html  options.js
safari/: AppIcon.sketch  Shared.xcconfig  Shared.xconfig  app-store-description.txt  app-store-keywords.txt
scripts/: bootstrap  build  chrome-launch.js  lint  test  version.sh  watch-build
src/: github-linker.js
tasks/: bowerCache.js  cache.tpl  composerCache.js  npmCache.js  writeChangelog.js  writeStats.js
test/: .eslintrc  _setup.js  bower.json  click-handler.test.js  github-linker.spec.js  insert-link.test.js  live-resolver-query.js  load-plugins.test.js  main-lib.js  main-packages.js  mocha.opts  pattern-preset.test.js  pattern-presets.test.js  sourceReader.spec.js  wrap-keyword.test.js
(+137 files in other folders)
